<resources>
    <string name="app_name">TourIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_user">Criar Usuário</string>
    <string name="hint_username">Insira um username</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_usuario_adm">Usuários</string>
    <string name="continuar">Continuar</string>
    <string name="logout">Logout</string>
    <string name="username">Username: </string>
    <string name="nome">Nome: </string>
    <string name="email">Email: </string>
    <string name="nome_usuario_logado">Usuário</string>
    <string name="username_logado">Username</string>
    <string name="google_maps_key">AIzaSyAZdDBDb_NfnoqH2Q2SnyL_wE5Ns7YMmr4</string>
    <string name="title_activity_local_details">LocalDetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="enderecoImageView">Endereço</string>
    <string name="title_activity_local_user">Locais Usuário</string>
    <string name="title_activity_crete_roteiro">Criação de Roteiro</string>
    <string name="title_activity_local_search">Pesquisa de Locais</string>
    <string name="title_activity_roteiro_details">Detalhes do Roteiro</string>
    <string name="title_activity_meus_roteiros">Meus Roteiros</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="meus_roteiros">Meus Roteiros</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_pesquisa_roteiros">Pesquisa de Roteiros</string>
    <string name="desativar_usuario">Desativar usuário</string>
    <string name="adicionar_local">Adicionar Local</string>
    <string name="login">Login</string>
    <string name="melhores_roteiros">Melhores Roteiros</string>
    <string name="cultural">Cultural</string>
    <string name="aventura">Aventura</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="natureza">Natureza</string>
    <string name="criador">Criador: </string>
    <string name="tipo">Tipo: </string>
    <string name="distancia">Distância</string>
    <string name="aberto_agora">Aberto agora</string>
    <string name="local">Local</string>
    <string name="adicionar">Adicionar</string>
    <string name="pesquisa_de_roteiros">Pesquisa de Roteiros</string>
    <string name="usuarios">Usuários</string>
    <string name="configuracoes">Configurações</string>
    <string name="roteiros_criados">Roteiros Criados</string>
    <string name="roteiros_seguidos">Roteiros Seguidos</string>
    <string name="aceitar">Aceitar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mensagem_excluir_roteiro">Deseja excluir o roteiro?</string>
    <string name="mensagem_excluir_evento">Deseja excluir o evento?</string>
    <string name="mensagem_publicar">Deseja publicar o roteiro?</string>
    <string name="mensagem_seguir">Deseja seguir o roteiro?</string>
    <string name="mensagem_deixar_de_seguir">Deseja deixar de seguir o roteiro?</string>
    <string name="pesquisando_local">Pesquisando local</string>
    <string name="aguarde">Aguarde</string>
    <string name="deslogaando_usuario">Deslogando usuário</string>
    <string name="conectando">Conectando</string>
    <string name="romantico">Romântico</string>
    <string name="diversos">Diversos</string>
    <string name="nome_evento">Nome do evento</string>
    <string name="data_evento">Data do evento</string>
    <string name="hora_inicio_evento">Horário de início</string>
    <string name="hora_fim_evento">Horário de término</string>
    <string name="adicionar_convidado">Adicionar convidados</string>
    <string name="meus_eventos_criados">Meus Eventos</string>
</resources>