<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerItemMeusRoteiros"
            android:icon="@drawable/ic_menu_roteiro"
            android:title="@string/meus_roteiros" />
        <item
            android:id="@+id/drawerItemPesquisaRoteiros"
            android:icon="@drawable/ic_search"
            android:title="@string/pesquisa_de_roteiros"/>
        <item
            android:id="@+id/drawerItemMeusEventos"
            android:icon="@drawable/ic_event"
            android:title="@string/meus_eventos_criados"/>
        <item
            android:id="@+id/drawerItemConfiguracoesUsuarioAdm"
            android:icon="@drawable/ic_person"
            android:visible="false"
            android:title="@string/usuarios" />
        <item
            android:id="@+id/drawerItemConfiguracoesUsuarioComum"
            android:icon="@drawable/ic_settings"
            android:title="@string/configuracoes" />
        <item
            android:id="@+id/drawerItemLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>
