<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/roteiroDetailsAppBarLayout"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.SearchView
            android:id="@+id/pesquisaRoteirosSearchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            app:searchIcon="@drawable/ic_search_cinza"
            android:queryHint="Pesquise por nome/tipo/lugar"
            app:defaultQueryHint="Pesquise por nome/tipo/lugar" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cardsPesquisaRoteiroActivityScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/cardsPesquisaRoteiroActivityLinearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen170dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bests"
                    android:text="@string/melhores_roteiros"
                    android:id="@+id/melhoresPesquisaRoteiroActivityButton"
                    android:textSize="@dimen/dimen20sp"
                    android:textStyle="bold"
                    android:textColor="@color/cor_branco"
                    android:layout_marginStart="@dimen/dimen12dp"
                    android:elevation="@dimen/dimen5dp"
                    android:layout_marginTop="@dimen/dimen12dp"
                    android:layout_marginEnd="@dimen/dimen12dp"
                    android:layout_marginBottom="@dimen/dimen6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen170dp"
                android:layout_marginStart="@dimen/dimen6dp"
                android:layout_marginEnd="@dimen/dimen6dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cultural"
                    android:text="@string/cultural"
                    android:textSize="@dimen/dimen20sp"
                    android:id="@+id/culturalPesquisaRoteiroActivityButton"
                    android:textStyle="bold"
                    android:textColor="@color/cor_branco"
                    android:layout_weight="1"
                    android:elevation="@dimen/dimen5dp"
                    android:layout_margin="@dimen/dimen6dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/aventura"
                    android:text="@string/aventura"
                    android:textSize="@dimen/dimen20sp"
                    android:textStyle="bold"
                    android:id="@+id/aventuraPesquisaRoteiroActivityButton"
                    android:elevation="@dimen/dimen5dp"
                    android:textColor="@color/cor_branco"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/dimen6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen170dp"
                android:layout_marginStart="@dimen/dimen6dp"
                android:layout_marginEnd="@dimen/dimen6dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gastronomia"
                    android:text="@string/gastronomia"
                    android:textSize="@dimen/dimen20sp"
                    android:textStyle="bold"
                    android:id="@+id/gastronomiaPesquisaRoteiroActivityButton"
                    android:textColor="@color/cor_branco"
                    android:layout_weight="1"
                    android:elevation="@dimen/dimen5dp"
                    android:layout_margin="@dimen/dimen6dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/natureza"
                    android:text="@string/natureza"
                    android:textSize="@dimen/dimen20sp"
                    android:textStyle="bold"
                    android:id="@+id/naturezaPesquisaRoteiroActivityButton"
                    android:textColor="@color/cor_branco"
                    android:layout_weight="1"
                    android:elevation="@dimen/dimen5dp"
                    android:layout_margin="@dimen/dimen6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen170dp"
                android:layout_marginStart="@dimen/dimen6dp"
                android:layout_marginEnd="@dimen/dimen6dp"
                android:layout_marginBottom="@dimen/dimen6dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/romantico"
                    android:text="@string/romantico"
                    android:textSize="@dimen/dimen20sp"
                    android:textStyle="bold"
                    android:id="@+id/romanticoPesquisaRoteiroActivityButton"
                    android:textColor="@color/cor_branco"
                    android:layout_weight="1"
                    android:elevation="@dimen/dimen5dp"
                    android:layout_margin="@dimen/dimen6dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/diversos"
                    android:text="@string/diversos"
                    android:textSize="@dimen/dimen20sp"
                    android:textStyle="bold"
                    android:id="@+id/diversosPesquisaRoteiroActivityButton"
                    android:textColor="@color/cor_branco"
                    android:layout_weight="1"
                    android:elevation="@dimen/dimen5dp"
                    android:layout_margin="@dimen/dimen6dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pesquisaRoteirosFrameLayout"/>

</LinearLayout>
