<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.marcus.fernanda.andre.tourit.evento.controler.CreateEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen20dp"
                android:hint="@string/nome_evento"
                android:id="@+id/nomeEventoCreateEventActivityTextInputLayout">

                <EditText
                    android:id="@+id/nomeEventoCreateEventActivityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen20dp"
                android:layout_below="@id/nomeEventoCreateEventActivityTextInputLayout"
                android:hint="@string/data_evento"
                android:id="@+id/dataEventoCreateEventActivityTextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dataEventoCreateEventActivityEditText"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dataEventoCreateEventActivityTextInputLayout"
                android:id="@+id/horariosCreateEventLinearLayout"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen20dp"
                    android:layout_weight="1"
                    android:hint="@string/hora_inicio_evento"
                    android:id="@+id/horaInicioCreateEventActivityTextInputLayout">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/horaInicioEventoCreateEventActivityEditText"
                        android:focusable="false"
                        android:gravity="center_horizontal"
                        android:clickable="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen20dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:layout_weight="1"
                    android:hint="@string/hora_fim_evento"
                    android:id="@+id/horaFimCreateEventActivityTextInputLayout">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/horaFimEventoCreateEventActivityEditText"
                        android:focusable="false"
                        android:gravity="center_horizontal"
                        android:clickable="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/adicionarConvidadoCreateEventActivityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/horariosCreateEventLinearLayout"
                android:layout_margin="@dimen/dimen4dp"
                android:drawablePadding="@dimen/dimen10dp"
                android:drawableEnd="@drawable/ic_add_3"
                android:drawableTint="@color/cor_branco"
                android:background="@color/colorAccent"
                android:paddingEnd="@dimen/dimen5dp"
                android:gravity="center"
                android:paddingStart="@dimen/dimen30dp"
                android:textSize="@dimen/dimen15sp"
                android:layout_marginTop="@dimen/dimen10dp"
                android:textColor="@color/cor_branco"
                android:text="@string/adicionar_convidado"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen4dp"
                android:layout_marginEnd="@dimen/dimen4dp"
                android:id="@+id/listaConvidadosCreateEventActivityFrameLayout"
                android:layout_below="@id/adicionarConvidadoCreateEventActivityButton"/>

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        android:layout_margin="@dimen/dimen16dp"
        android:layout_gravity="bottom|end"
        android:id="@+id/criarEventoCreateEventActivityFab"/>

</android.support.design.widget.CoordinatorLayout>
